minio.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio
  namespace: outline
  labels:
    app: minio
spec:
  replicas: 1
  serviceName: "minio"
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      nodeSelector:
        stockage: persistant01
      containers:
      - name: minio
        image: minio/minio:RELEASE.2025-09-07T16-13-09Z-cpuv1
        args: ["server", "/data"]
        ports:
        - containerPort: 9000
        resources:
          requests:
            memory: "256Mi"  # Réservé au démarrage
            cpu: "250m"    # 0.25 CPU réservé
          limits:
            memory: "1Gi"  # Plafond indépassable (sinon Kill)
            cpu: "500m"      # Plafond CPU
        volumeMounts:
        - name: minio
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
     name: minio
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
---
apiVersion: v1
kind: Service
metadata:
  name: minio # Nom DNS : minio.outline.svc.cluster.local
  namespace: outline
spec:
  type: ClusterIP
  selector:
    app: minio
  ports:
  - port: 9000
    targetPort: 9000
