postgresql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: outline
  labels:
    app: PostgreSQL
spec:
  replicas: 1
  serviceName: "postgres"
  selector:
    matchLabels:
      app: PostgreSQL
  template:
    metadata:
      labels:
        app: PostgreSQL
    spec:
      nodeSelector:
        stockage: persistant01
      containers:
      - name: postgres
        image: postgres:18.1-alpine3.23
        ports:
        - containerPort: 5432
        resources:
          requests:
            memory: "64Mi"  # Réservé au démarrage
            cpu: "256m"    # 0.25 CPU réservé
          limits:
            memory: "1Gi"  # Plafond indépassable (sinon Kill)
            cpu: "500m"      # Plafond CPU
        volumeMounts:
        - name: postgresql
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: postgresql
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
---
apiVersion: v1
kind: Service
metadata:
  name: postgres      # Nom DNS : postgres.outline.svc.cluster.local
  namespace: outline
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: PostgreSQL
