redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: outline
  labels:
    app: Redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: Redis
  template:
    metadata:
      labels:
        app: Redis
    spec:
      containers:
      - name: redis
        image: redis:8.4.0-alpine
        ports:
        - containerPort: 6379
        resources:
          requests:
            memory: "64Mi"  # Réservé au démarrage
            cpu: "250m"    # 0.25 CPU réservé
          limits:
            memory: "256Mi"  # Plafond indépassable (sinon Kill)
            cpu: "500m"      # Plafond CPU
---
apiVersion: v1
kind: Service
metadata:
  name: redis # Nom DNS : redis.outline.svc.cluster.local
  namespace: outline
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: Redis
